patch: Add aotutil to check patch report status
Currently shell out to aws cli, should switch to aws go sdk v2

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ sshkey.pem
 # Local .terraform directories
 **/.terraform/*
 terraform/**/.terraform.lock.hcl
+terraform/**/creds.env
+terraform/**/validator_docker_compose.yml
 
 # Local output directories
 **/output/*
