patch: Add license header

--- a/hack/aotutil/Makefile
+++ b/hack/aotutil/Makefile
@@ -1,5 +1,10 @@
+all: license fmt build
+
 fmt:
 	goimports -d -l -w .
 
 build: fmt
 	go build .
+
+license:
+	addlicense -c 'Amazon.com, Inc. or its affiliates' $(shell ls *.go)
