patch: Update tf to use aotutil

--- a/hack/aotutil/Makefile
+++ b/hack/aotutil/Makefile
@@ -6,5 +6,8 @@ fmt:
 build: fmt
 	go build .
 
+install: fmt
+	go install .
+
 license:
 	addlicense -c 'Amazon.com, Inc. or its affiliates' $(shell ls *.go)
