--- a/validator/src/main/resources/validations/ecs-container-insight.yml
+++ b/validator/src/main/resources/validations/ecs-container-insight.yml
@@ -1,7 +1,7 @@
-#- validationType: "ecs-container-insight-prometheus-metrics"
-#  shouldValidateMetricValue: false
-#  expectedMetricTemplate: "ECS_CONTAINER_INSIGHT_PROMETHEUS_METRIC"
-- validationType: "container-insight-ecs-prometheus-logs"
+- validationType: "container-insight-ecs-prometheus-metrics"
   shouldValidateMetricValue: false
-  # NOTE: the value here matches enum ExpectedLogStructure under fileconfigs pacakge
-  expectedLogStructureTemplate: "CONTAINER_INSIGHT_ECS_PROMETHEUS_LOG"
+  expectedMetricTemplate: "CONTAINER_INSIGHT_ECS_PROMETHEUS_METRIC"
+#- validationType: "container-insight-ecs-prometheus-logs"
+#  shouldValidateMetricValue: false
+#  # NOTE: the value here matches enum ExpectedLogStructure under fileconfigs pacakge
+#  expectedLogStructureTemplate: "CONTAINER_INSIGHT_ECS_PROMETHEUS_LOG"
